[CARBONDATA-1397]Fix findbugs issues in carbondata-presto module
Fix findbugs issues in carbondata-presto module

This closes #1271