@@ -99,19 +99,17 @@ public class CarbondataSplitManager implements ConnectorSplitManager {
     CarbonTableCacheModel cache = carbonTableReader.getCarbonCache(key);
     Expression filters = parseFilterExpression(layoutHandle.getConstraint(), cache.carbonTable);
 
-    if (cache != null) {
-      try {
-        List<CarbonLocalInputSplit> splits = carbonTableReader.getInputSplits2(cache, filters);
+    try {
+      List<CarbonLocalInputSplit> splits = carbonTableReader.getInputSplits2(cache, filters);
 
-        ImmutableList.Builder<ConnectorSplit> cSplits = ImmutableList.builder();
-        for (CarbonLocalInputSplit split : splits) {
-          cSplits.add(new CarbondataSplit(connectorId, tableHandle.getSchemaTableName(),
-              layoutHandle.getConstraint(), split, rebuildConstraints));
-        }
-        return new FixedSplitSource(cSplits.build());
-      } catch (Exception ex) {
-        System.out.println(ex.toString());
+      ImmutableList.Builder<ConnectorSplit> cSplits = ImmutableList.builder();
+      for (CarbonLocalInputSplit split : splits) {
+        cSplits.add(new CarbondataSplit(connectorId, tableHandle.getSchemaTableName(),
+            layoutHandle.getConstraint(), split, rebuildConstraints));
       }
+      return new FixedSplitSource(cSplits.build());
+    } catch (Exception ex) {
+      System.out.println(ex.toString());
     }
     return null;
   }
@@ -182,7 +180,7 @@ public class CarbondataSplitManager implements ConnectorSplitManager {
         } else {
           List<Expression> rangeConjuncts = new ArrayList<>();
           if (!range.getLow().isLowerUnbounded()) {
-            Object value = ConvertDataByType(range.getLow().getValue(), type);
+            Object value = convertDataByType(range.getLow().getValue(), type);
             switch (range.getLow().getBound()) {
               case ABOVE:
                 if (type == TimestampType.TIMESTAMP) {
@@ -206,7 +204,7 @@ public class CarbondataSplitManager implements ConnectorSplitManager {
             }
           }
           if (!range.getHigh().isUpperUnbounded()) {
-            Object value = ConvertDataByType(range.getHigh().getValue(), type);
+            Object value = convertDataByType(range.getHigh().getValue(), type);
             switch (range.getHigh().getBound()) {
               case ABOVE:
                 throw new IllegalArgumentException("High marker should never use ABOVE bound");
@@ -239,7 +237,7 @@ public class CarbondataSplitManager implements ConnectorSplitManager {
       } else if (singleValues.size() > 1) {
         ListExpression candidates = null;
         List<Expression> exs = singleValues.stream().map((a) -> {
-          return new LiteralExpression(ConvertDataByType(a, type), coltype);
+          return new LiteralExpression(convertDataByType(a, type), coltype);
         }).collect(Collectors.toList());
         candidates = new ListExpression(exs);
 
@@ -279,7 +277,7 @@ public class CarbondataSplitManager implements ConnectorSplitManager {
    * @param colType
    * @return
    */
-  public static DataType Spi2CarbondataTypeMapper(Type colType) {
+  public static DataType spi2CarbondataTypeMapper(Type colType) {
     if (colType == BooleanType.BOOLEAN) return DataType.BOOLEAN;
     else if (colType == SmallintType.SMALLINT) return DataType.SHORT;
     else if (colType == IntegerType.INTEGER) return DataType.INT;
@@ -292,8 +290,8 @@ public class CarbondataSplitManager implements ConnectorSplitManager {
     else return DataType.STRING;
   }
 
-  public Object ConvertDataByType(Object rawdata, Type type) {
-    if (type.equals(IntegerType.INTEGER)) return new Integer((rawdata.toString()));
+  public Object convertDataByType(Object rawdata, Type type) {
+    if (type.equals(IntegerType.INTEGER)) return Integer.valueOf(rawdata.toString());
     else if (type.equals(BigintType.BIGINT)) return (Long) rawdata;
     else if (type.equals(VarcharType.VARCHAR)) return ((Slice) rawdata).toStringUtf8();
     else if (type.equals(BooleanType.BOOLEAN)) return (Boolean) (rawdata);
